test/spec_vectors/unreached-invalid/fail/module_105.wat
(module (func $type-cont-last-void-vs-empty (result i32) (loop (br 0 (nop)))))